EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==08/07/2009==
WildcardX: *BOTS* More code refactoring.
WildcardX: Implemented 4 additional abstract methods in the mob object, HasRaid(), HasGroup(), GetRaid(), GetGroup(). These will be implemented as common interfaces by any class deriving from Mob.
WildcardX: *BOTS* Tweaked bot logic so group channnel doesnt get spammed with every swing.
Trevius: Minor adjustment to the flow of logic for the MaxClientsSetByStatus rule to allow it to override settings for the additional max client rules if enabled.
Trevius: Corrected the Attack Rating portion of #showstats and #mystats
Trevius: (Secrets) Added new quest::gmsay("message") command that will send a message to all GMs (GMs only) on the server.
Trevius: (Secrets/Trevius) Added 2 new fields (maxlevel & scalerate) to npc_types for allowing NPCs to spawn within a range of levels and scale stats at the rate set
WildcardX: NPC is no longer a friend class in the Mob class. Moved the class member Mob::target to Mob's private scope to ensure other classes use the Mob::GetTarget() and Mob::SetTarget() methods.
WildcardX: *BOTS* Commented out code that let bots use the groups chat channel until I can fix I bug I found that causes bots to have their targets repeatedly reset to null values and back to their attacker while in combat.

Required SQL: utils/sql/svn/897_npc_maxlevel_scalerate.sql

==08/06/2009==
WildcardX: *BOTS* Significantly modified the bots table. Removed several unnecessary columns and changed  many interger columns to accept signed values. Added new columns to track dates and times for bots.
WildcardX: *BOTS* Slowed bot runspeed to a more reasonable default value.
WildcardX: *BOTS* Bots will now depop instead of being murdered to go away.
WildcardX: Only a Client object will try to update its group id in the database when a group member is removed from the group.